<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/tv_contact_title"
        style="@style/CenteredTitleStyle"
        android:padding="50dp"
        android:text="@string/contact_title" />

    <TextView
        android:id="@+id/tv_contact_des"
        style="@style/PlainTextStyle"
        android:padding="20dp"
        android:text="@string/contact_des"/>

    <TextView
        style="@style/PlainTextStyle"
        android:padding="20dp"
        android:text="@string/email"
        android:autoLink="email"/>

</LinearLayout>