<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".dataUtils.MyFlowerInfo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:layout_marginBottom="15dp"
        android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_my_flower_img"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/flower_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/NameTitle"
                    android:id="@+id/tv_my_flower_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/tv_my_flower_loc"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_show_map"
                        style="@style/AccentButtonStyle"
                        app:useCompatPadding="true"
                        android:onClick="onShowMap"
                        app:tint="@android:color/white"
                        app:maxImageSize="56dp"
                        app:srcCompat="@mipmap/ic_map_foreground"
                        android:contentDescription="@string/show_on_map" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_create_notification"
                        style="@style/AccentButtonStyle"
                        app:tint="@android:color/white"
                        app:maxImageSize="56dp"
                        app:useCompatPadding="true"
                        app:srcCompat="@drawable/ic_notifications_off"
                        android:onClick="onSetNotifications"
                        android:contentDescription="@string/create_notifications" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/TitleStyle"
            android:id="@+id/tv_my_flower_type"/>

        <TextView
            style="@style/PlainTextStyle"
            android:id="@+id/tv_my_flower_desc"/>

        <TextView
            style="@style/SectionStyle"
            android:id="@+id/tv_water_title"
            android:text="@string/water" />

        <TextView
            style="@style/PlainTextStyle"
            android:id="@+id/tv_my_water_info" />

        <TextView
            style="@style/SectionStyle"
            android:id="@+id/tv_sun_title"
            android:text="@string/sun" />

        <TextView
            style="@style/PlainTextStyle"
            android:id="@+id/tv_my_sun_info" />

        <TextView
           style="@style/SectionStyle"
            android:id="@+id/tv_my_soil_title"
            android:text="@string/soil" />

        <TextView
            style="@style/PlainTextStyle"
            android:id="@+id/tv_my_soil_info" />


    </LinearLayout>

</ScrollView>